# meeting-assistant--agents

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml
docs/: api-reference.md  architecture.md
src/models/: schemas.py
