[project]
name = "meeting-assistant-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.0",
    "asyncpg>=0.30.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27.0",
    "jira>=3.8.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "pyannote-audio>=3.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "tenacity>=9.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "whisperx>=3.1.0",
]
